--- a/web/manifest.json
+++ b/web/manifest.json
@@ -1,6 +1,6 @@
 {
-    "name": "receita2",
-    "short_name": "receita2",
+    "name": "receita4tarefa5",
+    "short_name": "receita4tarefa5",
     "start_url": ".",
     "display": "standalone",
     "background_color": "#0175C2",
