--- a/windows/runner/Runner.rc
+++ b/windows/runner/Runner.rc
@@ -90,12 +90,12 @@ BEGIN
         BLOCK "040904e4"
         BEGIN
             VALUE "CompanyName", "com.example" "\0"
-            VALUE "FileDescription", "desafio2" "\0"
+            VALUE "FileDescription", "formulario" "\0"
             VALUE "FileVersion", VERSION_AS_STRING "\0"
-            VALUE "InternalName", "desafio2" "\0"
+            VALUE "InternalName", "formulario" "\0"
             VALUE "LegalCopyright", "Copyright (C) 2023 com.example. All rights reserved." "\0"
-            VALUE "OriginalFilename", "desafio2.exe" "\0"
-            VALUE "ProductName", "desafio2" "\0"
+            VALUE "OriginalFilename", "formulario.exe" "\0"
+            VALUE "ProductName", "formulario" "\0"
             VALUE "ProductVersion", VERSION_AS_STRING "\0"
         END
     END
